--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ramonak/react-progress-bar": "^5.3.0",
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
     "lucide-react": "^0.474.0",
@@ -21,6 +22,7 @@
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
+    "react-simple-star-rating": "^5.1.7",
     "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
