--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "react-simple-star-rating": "^5.1.7",
+    "react-super-responsive-table": "^6.0.1",
     "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
