--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -24,7 +24,8 @@
     "react-router-dom": "^7.1.1",
     "react-simple-star-rating": "^5.1.7",
     "react-super-responsive-table": "^6.0.1",
-    "react-type-animation": "^3.2.0"
+    "react-type-animation": "^3.2.0",
+    "swiper": "^11.2.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
