--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -20,6 +20,7 @@
     "react-hot-toast": "^2.5.1",
     "react-icon": "^1.0.0",
     "react-icons": "^5.4.0",
+    "react-rating-stars-component": "^2.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "react-simple-star-rating": "^5.1.7",
