--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -13,8 +13,10 @@
     "@ramonak/react-progress-bar": "^5.3.0",
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.9",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
