--- a/vite-project/.env
+++ b/vite-project/.env
@@ -1,4 +1,4 @@
-VITE_BASE_URL = "http://localhost:4000/api/v1"
+VITE_BASE_URL = "http://localhost:4000"
 
 FE 8 mai profile wala thora dekhaya hai....
 FE 8 last assignment
